@@ -1,3 +1,7 @@
+2005-09-07  Shiro Kawai  <shiro@acm.org>
+
+	* dbd/mysql.scm: adapted to the dbi api change.
+
 2005-09-04  Shiro Kawai  <shiro@acm.org>
 
 	* dbd/mysql.scm: slightly modified to follow the change in
